# phantasm

./: .gitignore  BENCH_ARCHIVE_README.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  ML_STEGANALYSIS.md  QWEN_AUDIT.md  README.md  STATUS.md
archive/: PLAN.md  README.md  RESEARCH.md
audits/: MINIMAX_AUDIT.md  QWEN_AUDIT_RE_MINIMAX.md  README.md
phantasm-bench/: Cargo.toml
phantasm-bench/src/: ber_sweep.rs  error.rs  eval_corpus.rs  lib.rs  main.rs  metrics.rs  report.rs  research_curve.rs  stealth.rs  steganalyzer.rs
phantasm-bench/tests/: cli_smoke.rs  eval_corpus_tests.rs  metrics_tests.rs  stealth_tests.rs
phantasm-channel/: Cargo.toml
phantasm-channel/src/: error.rs  lib.rs  minicer.rs  simulate.rs  twitter.rs  zigzag.rs
phantasm-channel/tests/: integration.rs  survival.rs
phantasm-cli/: Cargo.toml
phantasm-cli/src/: logger.rs  main.rs
phantasm-cli/src/commands/: analyze.rs  bench.rs  channels.rs  dump_costs.rs  embed.rs  extract.rs  mod.rs  passphrase.rs
phantasm-cli/tests/: integration_tests.rs
phantasm-core/: Cargo.toml
phantasm-core/examples/: compare_cost_functions.rs
phantasm-core/src/: channel.rs  content_adaptive.rs  error.rs  hash_guard.rs  lib.rs  minimal.rs  orchestrator.rs  pipeline.rs  pipeline_spatial.rs  plan.rs  research_raw.rs  stealth.rs
phantasm-core/tests/: content_adaptive_integration.rs  integration.rs  spatial_integration.rs
phantasm-cost/: Cargo.toml
phantasm-cost/src/: juniward.rs  lib.rs  noisy.rs  passphrase_subset.rs  s_uniward.rs  sidecar.rs  uerd.rs
phantasm-crypto/: Cargo.toml
phantasm-crypto/src/: aead.rs  envelope.rs  kdf.rs  lib.rs  mac.rs  metadata.rs  padding.rs
phantasm-ecc/: Cargo.toml
phantasm-ecc/src/: lib.rs
phantasm-image/: Cargo.toml
phantasm-image/examples/: fetch_corpus.rs  gen_cover.rs  measure_huffman_reopt.rs
phantasm-image/src/: color.rs  dct.rs  error.rs  jpeg.rs  lib.rs  png.rs
phantasm-image/tests/: integration.rs
phantasm-stc/: Cargo.toml
phantasm-stc/src/: double_layer.rs  encoder.rs  error.rs  lib.rs  parity.rs  tests.rs
research-corpus/: .gitignore  README.md  manifest.json
research-corpus-500/: .gitignore  README.md  cross_eval.json  manifest.json  training_history.json
research-corpus-500/scripts/: embed_multipass.sh
research-corpus-500/scripts/fishbowl/: README.md  eval_cross.py  eval_juniward_diversity500.py  finetune_d500.py  train_juniward_diversity500.py
spikes/dct-roundtrip/: Cargo.toml  REPORT.md
spikes/dct-roundtrip/src/: lib.rs  main.rs
spikes/dct-roundtrip/tests/: roundtrip.rs
spikes/phash-overlap/: README.md  REPORT.md  analyze.py  requirements.txt  results.json
