[workspace]
resolver = "2"
members = [
    "phantasm-image",
    "phantasm-crypto",
    "phantasm-stc",
    "phantasm-ecc",
    "phantasm-core",
    "phantasm-cli",
    "phantasm-cost",
    "phantasm-channel",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.4.0"

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
