[package]
name = "phantasm-bench"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "phantasm-bench"
path = "src/main.rs"

[[bin]]
name = "post-stc-probe"
path = "src/bin/post_stc_probe.rs"

[[bin]]
name = "salt-drift-probe"
path = "src/bin/salt_drift_probe.rs"

[[bin]]
name = "salt-magnitude-probe"
path = "src/bin/salt_magnitude_probe.rs"

[[bin]]
name = "coeff-parity-probe"
path = "src/bin/coeff_parity_probe.rs"

[[bin]]
name = "stego-parity-probe"
path = "src/bin/stego_parity_probe.rs"

[dependencies]
image = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
indicatif = "0.17"
phantasm-image = { path = "../phantasm-image" }
phantasm-core = { path = "../phantasm-core" }
phantasm-cost = { path = "../phantasm-cost" }
statrs = "0.16"
tempfile = "3"
walkdir = "2"
sha2 = "0.10"
rayon = "1"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
