[package]
name = "phantasm-channel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Channel-aware (compression-resilient) embedding adapters for phantasm."

[dependencies]
phantasm-image = { path = "../phantasm-image" }
phantasm-cost = { path = "../phantasm-cost" }
thiserror = "1"

[dev-dependencies]
image = "0.24"
tempfile = "3"
