[package]
name = "phantasm-cli"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "phantasm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
env_logger = "0.11"
log = "0.4"
phantasm-core = { path = "../phantasm-core" }
phantasm-cost = { path = "../phantasm-cost" }
phantasm-image = { path = "../phantasm-image" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
image = "0.25"
