[package]
name = "phantasm-cost"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Content-adaptive distortion functions for phantasm steganography."

[dependencies]
phantasm-image = { path = "../phantasm-image" }
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
image = "0.24"
tempfile = "3"
