[package]
name = "phantasm-crypto"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["std"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
hex = "0.4"
